Labs/Lab07/Kubernetes/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: frontend
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: frontend
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/br0: "true"
        io.kompose.service: frontend
    spec:
      containers:
        - env:
            - name: DB_IP
              value: http://db:8000
          image: tiray77/display_blogs
          name: frontend
          ports:
            - containerPort: 8000
          resources: {}
      restartPolicy: Always
status: {}
