Labs/Lab07/Kubernetes/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: frontend
  name: frontend
spec:
  ports:
    - name: "9000"
      port: 9000
      targetPort: 8000
  selector:
    io.kompose.service: frontend
status:
  loadBalancer: {}
