Labs/Lab07/Kubernetes/br0-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: br0
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/br0: "true"
  podSelector:
    matchLabels:
      io.kompose.network/br0: "true"
